<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".PostUserDataActivity">

    <EditText
        android:id="@+id/addName_editText"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        tools:ignore="Autofill,TextFields"
         />

    <EditText
        android:id="@+id/addEmail_editText"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email"
        tools:ignore="Autofill,TextFields"/>

    <EditText
        android:id="@+id/addContact_editText"
        android:layout_width="290dp"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:hint="@string/enter_contact"
        tools:ignore="Autofill,TextFields"/>

    <Button
        android:id="@+id/addData_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/post_data" />

</LinearLayout>